# marketplace_django

./: .env.sample  README.md  catalog.json  groups.json  mailing.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_catalog.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_product_price.py  0003_blog.py  0003_contact.py  0003_contacts.py  0004_version.py  0005_product_user.py  0006_alter_product_options_product_is_published.py  0007_delete_blog.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_item.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
mailing/: admin.py  models.py  urls.py  views.py
mailing/management/commands/: send_mail.py  sending_mail.py
mailing/migrations/: 0001_initial.py  0002_alter_message_body.py  0002_remove_newsletter_client_newsletter_clients_and_more.py
mailing/templates/mailing/: client_detail.html  client_list.html  confirm_delete.html  mailing_start.html  message_list.html  (+2 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_code.py  0003_alter_user_avatar_alter_user_country_and_more.py
(+8 files in other folders)
