[tool.poetry]
name = "marketplace-django"
version = "0.1.0"
description = ""
authors = ["Julya Shapaeva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.25.0"
pytils = "^0.4.1"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
